# EnvFlag

./: pyproject.toml
.github/workflows/: push-test.yml
src/envflag/: __init__.py
tests/: test_env_flag.py
